--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bigfoot Games",
+  "name": "GX-GamesCrack V2",
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js"
@@ -8,3 +8,4 @@
     "express": "^4.17.1"
   }
 }
+
